# crypto

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yaml
2pc-mpc/: Cargo.toml
commitment/: Cargo.toml
commitment/src/: pedersen.rs
enhanced-maurer/: Cargo.toml
enhanced-maurer/src/: encryption_of_tuple.rs  language.rs  scaling_of_discrete_log.rs
group/: Cargo.toml
group/src/: lib.rs  ristretto.rs  scalar.rs  secp256k1.rs
group/src/ristretto/: scalar.rs
group/src/secp256k1/: group_element.rs  scalar.rs
homomorphic-encryption/: Cargo.toml
homomorphic-encryption/src/: lib.rs
maurer/: Cargo.toml
maurer/src/: aggregation.rs  committment_of_discrete_log.rs  discrete_log_ratio_of_committed_values.rs  equality_between_commitments_with_different_public_parameters.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs  lib.rs  proof.rs  vector_commitment_of_discrete_log.rs
maurer/src/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs
maurer/src/proof/: fischlin.rs
proof/: Cargo.toml
proof/src/: aggregation.rs
proof/src/range/: bulletproofs.rs
proof/src/range/bulletproofs/: decommitment_round.rs
tiresias/: Cargo.toml
tiresias/src/decryption_key_share/: public_parameters.rs
