[workspace]
resolver = "2"

members = [
    "group",
    "commitment",
    "proof",
    "homomorphic-encryption",
    "enhanced-maurer",
]

exclude = [
    "2pc-mpc",
    "maurer",
    "tiresias"
]

[workspace.package]
authors = ["dWallet Labs Ltd. <dev@dwalletlabas.com>"]
description = "dWallet Labs LTD. Cryptography Library."
edition = "2021"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/dwallet-labs/crypto"
version = "0.1.0"

[workspace.dependencies]
bulletproofs = "4.0.0"
crypto-bigint = { version = "0.5.5", default-features = false }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "1.0.63"
subtle = { version = "2.5" }
gcd = { version = "2.3.0" }
crypto-primes = { version = "0.5.0", default-features = false }
rayon = { version = "1.10.0" }
rand_core = { version = "0.6.4", default-features = false }
rstest = "0.22.0"
rand = "0.8.5"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }
