[package]
name = "twopc_mpc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
proof = { path = "../proof" }
homomorphic_encryption = { path = "../homomorphic-encryption" }
commitment = { path = "../commitment" }
maurer = { path = "../maurer" }
enhanced_maurer = { path = "../enhanced-maurer" }
tiresias = { path = "../tiresias", features = ["test_exports"] }
thiserror = { workspace = true }

# For Benchmarks.
criterion = { workspace = true, features = ["html_reports"], optional = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true, features = ["std"], optional = true }
rand_core = { workspace = true, features = ["std"], optional = true }
rstest = { workspace = true, optional = true }
ecdsa = { version = "0.16.9", features = ["verifying"], optional = true }
k256 = { git = 'https://github.com/ycscaly/elliptic-curves.git', branch = "13.3-fixed", features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve", "alloc"], default-features = false, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std"] }
rand_core = { workspace = true, features = ["std"] }
rstest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
proof = { path = "../proof", features = ["test_helpers"] }
maurer = { path = "../maurer", features = ["test_helpers"] }
ecdsa = { version = "0.16.9", features = ["verifying"] }
k256 = { git = 'https://github.com/ycscaly/elliptic-curves.git', branch = "13.3-fixed", features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve", "alloc"], default-features = false }

[features]
secp256k1 = []
paillier = []
bulletproofs = []
benchmarking = ["dep:criterion", "dep:rand", "dep:rand_core", "dep:rstest", "dep:ecdsa", "dep:k256", "secp256k1", "paillier", "bulletproofs", "proof/test_helpers"]

[[bench]]
name = "benches"
harness = false
