[package]
name = "enhanced_maurer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
group = { path = "../group" }
proof = { path = "../proof" }
homomorphic_encryption = { path = "../homomorphic-encryption" }
commitment = { path = "../commitment" }
maurer = { git = "https://github.com/dwallet-labs/maurer.git", branch = "dcomeq" }
tiresias = { path = "../tiresias", features = ["test_exports"] }

criterion = { version = "0.5", features = ["html_reports"], optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
rstest = { version = "0.22.0", optional = true }

[dev-dependencies]
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git" }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
rstest = { version = "0.22.0" }
proof = { path = "../proof", features = ["test_helpers"] }
maurer = { git = "https://github.com/dwallet-labs/maurer.git", branch = "dcomeq", features = ["test_helpers"] }

[features]
default = []
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rstest", "proof/test_helpers"]
