[package]
name = "enhanced_maurer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
proof = { path = "../proof" }
homomorphic_encryption = { path = "../homomorphic-encryption" }
commitment = { path = "../commitment" }
maurer = { path = "../maurer" }
tiresias = { path = "../tiresias", features = ["test_exports"] }
thiserror = { workspace = true }

# For Benchmarking.
criterion = { workspace = true, features = ["html_reports"], optional = true }
rand_core = { workspace = true, features = ["std"], optional = true }
getrandom = { workspace = true, features = ["js"] }
rstest = { workspace = true, optional = true }

[dev-dependencies]
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git" }
curve25519-dalek = { workspace = true, features = ["u64_backend", "serde"] }
rand_core = { workspace = true,  features = ["std"] }
rstest = { workspace = true }
proof = { path = "../proof", features = ["test_helpers"] }
maurer = { path = "../maurer", features = ["test_helpers"] }

[features]
default = []
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rstest", "proof/test_helpers"]
