[package]
name = "group"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
serde = { workspace = true, features = ["derive"] }
subtle = { workspace = true, features = ["const-generics"] }
subtle-ng = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve", "alloc"], default-features = false }
curve25519-dalek = { workspace = true, features = ["u64_backend", "serde"] }
sha3_old = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]

[features]
