[package]
name = "homomorphic_encryption"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
group = { path = "../group" }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rand_core = { workspace = true, features = ["std"] }

[features]

