[package]
name = "maurer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
proof = { path = "../proof" }
commitment = { path = "../commitment" }
thiserror = { workspace = true }

# For Benchmarking.
criterion = { workspace = true, features = ["html_reports"], optional = true }
rand_core = { workspace = true, features = ["std"], optional = true }
getrandom = { workspace = true, features = ["js"] }
rstest = { workspace = true, optional = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["std"] }
criterion = { workspace = true, features = ["html_reports"] }
rstest = { workspace = true }
proof = { path = "../proof", features = ["test_helpers"] }

[features]
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rstest", "proof/test_helpers"]
benchmarking = ["test_helpers"]

[[bench]]
name = "benches"
harness = false
