[package]
name = "proof"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
merlin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
commitment = { path = "../commitment" }
thiserror = "1.0"
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git" }

criterion = { workspace = true, features = ["html_reports"], optional = true }
rand_core = { workspace = true, features = ["std"], optional = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true, features = ["std"], optional = true }
rstest = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, default-features = false, features = ["u64_backend", "serde"] }

[dev-dependencies]
rand_core = { workspace = true, features = ["std"] }
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git", features = ["cloneable"] }

[features]
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rand", "dep:rstest", "bulletproofs/cloneable"]
